--- a/views/movies/movie-random.hbs
+++ b/views/movies/movie-random.hbs
@@ -37,7 +37,7 @@
     {{/if}}
   </div>
 </div>
-<form action="/favourite-movies/{{randomMovie.id}}" method="POST">
+<form hidden action="/favourite-movies/{{randomMovie.id}}" method="POST">
   <div class="buttons-details">
     <button class="button-list-details" type="submit"><i
         class="heart-icon fa-solid fa-heart"
