--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -28,10 +28,6 @@ input[type="text"] {
   align-self: center;
 }
 
-form {
-  width: 80%;
-}
-
 a {
   text-decoration: none;
   color: white;
@@ -39,6 +35,10 @@ a {
   background-color: #242525;
   padding: 10px;
   border-radius: 2px;
+}
+
+form {
+  width: 80%;;
 }
 
 .search-bar {
