--- a/public/stylesheets/width500.css
+++ b/public/stylesheets/width500.css
@@ -1,99 +1,150 @@
- @media (max-width: 500px) {
-    .each-movie-div {
-      width: 100px;
-      height: 270px;
-      background-color: #242525;
-    }
-    .movie-img {
-      width: 100px;
-      height: 150px;
-    }
-  
-    .movie-title {
-      font-size: 10px;
-    }
-  
-    .button-style {
-      border: none;
-      background-color: #242525;
-      color: white;
-      font-size: 7px;
-      margin-bottom: 7px;
-    }
-  
-    .button-list {
-      border: none;
-      background-color: #242525;
-      color: white;
-      font-size: 7px;
-      margin-top: 5px;
-    }
-  
-    .button-watch {
-      border: none;
-      background-color: #434547;
-      font-size: 7px;
-      padding: 5px 15px;
-      border-radius: 6px;
-      color: #3f6fb2;
-      font-weight: bold;
-    }
-  
-    span {
-      font-size: 7px;
-    }
-  
-    .movie-title-div {
-      width: 100px;
-      height: 30px;
-    }
-  
-    .movie-detail-div {
-      display: flex;
-    }
-  
-    .details-movie > p {
-      font-size: 10px;
-    }
-  
-    .small-details {
-      color: #a0a0a0;
-    }
-  
-    .movie-img-detail {
-      width: 200px;
-      height: 200px;
-    }
-  
-    .movie-video {
-      display: flex;
-      justify-content: center;
-    }
-  
-    iframe {
-      width: fit-content;
-    }
-  
-    .buttons-details {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-  
-    .button-list-details {
-      border: none;
-      background-color: black;
-      color: white;
-      font-size: 12px;
-    }
-  
-    .button-watch-details {
-      border: none;
-      background-color: #434547;
-      font-size: 12px;
-      padding: 5px 15px;
-      border-radius: 6px;
-      color: #3f6fb2;
-      font-weight: bold;
-    }
-  } 
+@media (max-width: 500px) {
+  .each-movie-div {
+    width: 100px;
+    height: 270px;
+    background-color: #242525;
+  }
+  .movie-img {
+    width: 100px;
+    height: 150px;
+  }
+
+  .movie-title {
+    font-size: 10px;
+  }
+
+  .button-style {
+    border: none;
+    background-color: #242525;
+    color: white;
+    font-size: 7px;
+    margin-bottom: 7px;
+  }
+
+  .button-list {
+    border: none;
+    background-color: #242525;
+    color: white;
+    font-size: 7px;
+    margin-top: 5px;
+  }
+
+  .button-watch {
+    border: none;
+    background-color: #434547;
+    font-size: 7px;
+    padding: 5px 15px;
+    border-radius: 6px;
+    color: #3f6fb2;
+    font-weight: bold;
+  }
+
+  span {
+    font-size: 7px;
+  }
+
+  .movie-title-div {
+    width: 100px;
+    height: 30px;
+  }
+
+  .movie-detail-div {
+    display: flex;
+  }
+
+  .details-movie > p {
+    font-size: 10px;
+  }
+
+  .small-details {
+    color: #a0a0a0;
+  }
+
+  .movie-img-detail {
+    width: 200px;
+    height: 200px;
+  }
+
+  .movie-video {
+    display: flex;
+    justify-content: center;
+  }
+
+  iframe {
+    width: fit-content;
+  }
+
+  .buttons-details {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .button-list-details {
+    border: none;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+  }
+
+  .button-watch-details {
+    border: none;
+    background-color: #434547;
+    font-size: 12px;
+    padding: 5px 15px;
+    border-radius: 6px;
+    color: #3f6fb2;
+    font-weight: bold;
+  }
+
+  .profile-img {
+    border-radius: 50%;
+    height: 130px;
+    width: 130px;
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 5px 15px;
+  }
+
+  .hello-profile {
+    font-family: "Babylonica", cursive;
+    font-size: 30px;
+    font-weight: normal;
+  }
+
+  .profile-div {
+    flex-direction: column;
+  }
+
+  .welcome {
+    text-align: center;
+    margin-top: 50px;
+    color: #ecd409;
+    font-family: "Babylonica", cursive;
+    font-size: 100px;
+    font-weight: lighter;
+    align-items: center;
+    margin-top: 200px;
+  }
+
+  .marven {
+    font-size: 20px;
+  }
+
+  input[type="text"] {
+    width: 10%;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: #434547;
+    padding: 6px;
+    border-radius: 10px;
+    font-size: 17px;
+  }
+
+  .movie-detail {
+    flex-direction: column;
+    margin-top: 80px;
+  }
+
+  .welcome {
+    font-size: 50px;
+  }
+}
