img profile size

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
     <p><a href="movies/watch-list">My Watch List</a></p>
     <p><a href="movies/favourite-movies">List</a></p>
     <p><a href="movies/up-coming">Up coming</a></p>
-    <p><a href="/auth/logout">Logout</a></p>
+    <p><a href="/logout">Logout</a></p>
     <p><a href="/{{user._id}}/edit">Edit Profile</a></p>
     <p><a href="/">Back to main page</a></p>
     <form action="/{{user._id}}/delete" method="post">
