--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -151,6 +151,8 @@ b {
 
 .profile-img {
   border-radius: 50%;
+  height: 250px;
+  width: 250px;
   box-shadow: rgba(255, 255, 255, 0.25) 0px 5px 15px;
 }
 
