--- a/views/user/user-edit.hbs
+++ b/views/user/user-edit.hbs
@@ -12,7 +12,7 @@
 </form>
  --}}
 <div class="login">
-  <form class="login-form" action="/user/{{_id}}/edit" method="POST" enctype="multipart/form-data">
+  <form class="login-form" action="/{{_id}}/edit" method="POST" enctype="multipart/form-data">
     <label>
       <i class="fa-solid fa-user"></i>
       <input type="text" name="username" placeholder="Username" value="{{username}}"/>
