--- a/views/movies/up-coming.hbs
+++ b/views/movies/up-coming.hbs
@@ -20,7 +20,7 @@
         </form>
         </div>
         <div class="movie-list-detail">
-          <button class="button-style"><a
+          <button class="button-style"><a class="button-style-hover"
               href="movie-detail/{{id}}"
             >More</a></button>
           <form action="favourite-movies/{{id}}" method="POST">
