--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,19 +20,88 @@
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Babylonica&family=Bellefair&family=Dangrek&family=Montserrat:ital,wght@1,100&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 " />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/width500.css" />
     <link rel="stylesheet" href="/stylesheets/nav.css" />
     <link rel="stylesheet" href="/stylesheets/login.css" />
-    <link rel="stylesheet" href="/stylesheets/signup.css">
+    <link rel="stylesheet" href="/stylesheets/signup.css" />
   </head>
 
   <body>
-    <div class="div-nav">
+    <nav class="navbar navbar-expand-lg {{!-- navbar-light bg-light --}}">
+      <a class="button-style-hover navbar-brand marven" href="/">Marven</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fa-solid fa-bars"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <form
+          action="/movies/movie-search"
+          method="GET"
+          class="form-inline my-2 my-lg-0"
+        >
+          <input
+            class="form-control mr-sm-2"
+            name="title"
+            type="text"
+            placeholder="Search"
+            aria-label="Search"
+          />
+         {{!--  <button
+            class="btn btn-outline-success my-2 my-sm-0"
+            type="submit"
+          >Search</button> --}}
+        </form>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="navhover nav-link" href="/"><b>|</b> Home
+              <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="navhover nav-link" href="/movies/random-movie"><b>|</b> Random Movie</a>
+          </li>
+           <li class="nav-item">
+            <a class="navhover nav-link" href="/movies/up-coming"><b>|</b> Up Coming</a>
+          </li>
+          {{#if user}}
+            <li>
+              <a class="navhover nav-link" href="/movies/watch-list"><b>|</b> Watch List</a>
+            </li>
+            <li class="nav-item">
+              <a class="navhover nav-link" href="/profile">
+                <b class="b-username">|</b> {{user.username}}
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="navhover nav-link" href="/logout"><b class="b-login">|</b> Logout</a>
+            </li>
+          {{else}}
+            <li class="nav-item"><a class="navhover nav-link" href="/login"><b class="b-login">|</b> Login</a>
+            </li>
+            <li class="nav-item"><a class="navhover nav-link" href="/signup"><b class="b-login">|</b> Sign Up</a></li>
+          {{/if}}
+        </ul>
+      </div>
+    </nav>
+    {{!--     <div class="div-nav">
       <h1 class="marven">Marven</h1>
       <form action="/movies/movie-search" method="GET">
         <input type="text" name="title" />
@@ -52,32 +121,14 @@
         <a href="/login">Login</a>
         <a href="/signup">Signup</a>
       {{/if}}
-    </div>
-
-    {{!-- {{#if user}}
-  <div class="div-nav">
-    <h1>Marven</h1>
-    <div class="search-bar">
-      <form action="/movies/movie-search" method="GET">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" name="title" />
-      </form>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">{{user.username}}</button>
-      <div class="dropdown-content">
-        <a href="/profile">Profile</a>
-        <a href="/logout">Logout</a>
-      </div>
-    </div>
-    <p>Welcome to Marven, {{user.username}}</p>
-  {{/if}} --}}
+    </div> --}}
     <main>
-      {{!-- <img src="/images/logo.jpg" alt=""> --}}
-
       {{{body}}}</main>
-
-    <script src="/js/script.js"></script>
+ 
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="/js/script.js"></script>
   </body>
 
 </html>
