--- a/views/movies/movie-random.hbs
+++ b/views/movies/movie-random.hbs
@@ -27,7 +27,7 @@
       <iframe
         width="560"
         height="315"
-        src="https://www.youtube.com/embed/rg6CiPI6h2g"
+        src="https://www.youtube.com/embed/p3EwVIpzFjI"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
