--- a/views/movies/search-movie.hbs
+++ b/views/movies/search-movie.hbs
@@ -4,11 +4,12 @@
 <div class="movies-div">
   {{#each movieList}}
     <div class="each-movie-div">
+      <a href="movie-detail/{{id}}">
       <img
         class="movie-img"
         src="http://image.tmdb.org/t/p/w1280/{{poster_path}}"
         alt=""
-      />
+      /></a>
       <span><i class="star fa-solid fa-star"></i>{{vote_average}}</span>
       <div class="movie-title-div">
         <p class="movie-title">{{title}}</p>
